--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 <head>
 	<title>Profile Page</title>
 	<meta charset="utf-8">
+	<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" src="js/jquery.js"></script>
+	<!--script type="text/javascript" src="js/jquery.js"></script-->
+	<script type="text/javascript" src="node_modules/zepto/zepto.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<h1>Profile Page</h1>
+	<div id="presentation">
+		<img id="my-image" src="css/download.jpeg"/>
+		<h1>DANT Benjamin</h1>
+		<h2>Développeur Web</h2>
+	</div>
+	<div id="main-content">
+		<h1>Données Personnelles</h1>
+		<div id="block">
+			<div id="content">
+				<p>Nom</p>
+				<p>Prénom</p>
+				<p>Age</p>
+				<p>Adresse</p>
+				<p>e-mail</p>
+				<p>Téléphone</p>
+				<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+			</div>
+			<nav id="navbar">
+				<li id="personal-data">Données Personnelles</li>
+				<li id="cv">Cursus Scolaire</li>
+				<li id="pro">Compétences Professionnelles</li>
+				<li id="other">Autre</li>
+			</nav>
+		</div>
+		<footer>Copyright 2015 - Dant Benjamin</footer>
+	</div>
 </body>
 </html>
