--- a/index.html
+++ b/index.html
@@ -13,27 +13,43 @@
 </head>
 <body>
 	<div id="presentation">
-		<img id="my-image" src="css/download.jpeg"/>
-		<h1>DANT Benjamin</h1>
-		<h2>Développeur Web</h2>
+		<img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
+		<h1 alt="Profil de">DANT Benjamin</h1>
+		<h2 alt="Profession">Développeur Web</h2>
 	</div>
+	<h1 id="current-page">Données Personnelles</h1>
 	<div id="main-content">
-		<h1>Données Personnelles</h1>
 		<div id="block">
 			<div id="content">
-				<p>Nom</p>
-				<p>Prénom</p>
-				<p>Age</p>
-				<p>Adresse</p>
-				<p>e-mail</p>
-				<p>Téléphone</p>
-				<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+				<div id="personal-data-content" class="text-info default">
+					<p>Age</p>
+					<p>Adresse</p>
+					<p>e-mail</p>
+					<p>Téléphone</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+				</div>
+				<div id="cv-content" class="text-info">
+					<ul>
+						<li>Formation Simplon</li>
+					</ul>
+				</div>
+				<div id="pro-content" class="text-info">
+					<ul>
+						<li>HTML/CSS/Javascript</li>
+					</ul>
+				</div>
+				<div id="other-content" class="text-info">
+					<ul>
+						<li>Guitare</li>
+					</ul>
+				</div>
+				</div>
 			</div>
 			<nav id="navbar">
-				<li id="personal-data">Données Personnelles</li>
-				<li id="cv">Cursus Scolaire</li>
-				<li id="pro">Compétences Professionnelles</li>
-				<li id="other">Autre</li>
+				<li id="personal-data" alt="Afficher les données personnelles">Données Personnelles</li>
+				<li id="cv" alt="Afficher le Cursus Scolaire">Cursus Scolaire</li>
+				<li id="pro" alt="Afficher les Compétences Professionnelles">Compétences Professionnelles</li>
+				<li id="other" alt="Afficher les autres centres d'intérêt">Autre</li>
 			</nav>
 		</div>
 		<footer>Copyright 2015 - Dant Benjamin</footer>
