-M à J Appel Ajax pour compléter les champs, mustache.js à implémenter

--- a/index.html
+++ b/index.html
@@ -7,50 +7,66 @@
 	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!--script type="text/javascript" src="js/jquery.js"></script-->
 	<script type="text/javascript" src="node_modules/zepto/zepto.min.js"></script>
+	<script type="text/javascript"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div id="presentation">
 		<img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
-		<h1 alt="Profil de">DANT Benjamin</h1>
-		<h2 alt="Profession">Développeur Web</h2>
+		<h1><span elt="name" alt="Profil de">DANT Benjamin</span></h1>
+		<!--span elt="first_name"></span-->
+		<h2><span elt="occupation" alt="Profession">Développeur Web</span></h2>
+		<h1><span elt="current-page">Données Personnelles</span></h1>
 	</div>
-	<h1 id="current-page">Données Personnelles</h1>
 	<div id="main-content">
 		<div id="block">
 			<div id="content">
+				<nav id="navbar">
+					<li id="personal-data" alt="Afficher les données personnelles">Données Personnelles</li>
+					<li id="cv" alt="Afficher le Cursus Scolaire">Cursus Scolaire</li>
+					<li id="pro" alt="Afficher les Compétences Professionnelles">Compétences Professionnelles</li>
+					<li id="other" alt="Afficher les autres centres d'intérêt">Autre</li>
+				</nav>
 				<div id="personal-data-content" class="text-info default">
-					<p>Age</p>
-					<p>Adresse</p>
-					<p>e-mail</p>
-					<p>Téléphone</p>
+					<p><span>User ID : </span><span elt="id"></span></p>
+					<p><span>Badges Codecademy : </span><span elt="badges"></span></p>
+					<p><span>e-mail : </span><span elt="email"></span></p>
+					<p><span>Website : </span><span elt="website"></span></p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
 					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
 				</div>
 				<div id="cv-content" class="text-info">
 					<ul>
 						<li>Formation Simplon</li>
 					</ul>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
 				</div>
 				<div id="pro-content" class="text-info">
 					<ul>
 						<li>HTML/CSS/Javascript</li>
 					</ul>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
 				</div>
 				<div id="other-content" class="text-info">
 					<ul>
 						<li>Guitare</li>
 					</ul>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
 				</div>
 				</div>
 			</div>
-			<nav id="navbar">
-				<li id="personal-data" alt="Afficher les données personnelles">Données Personnelles</li>
-				<li id="cv" alt="Afficher le Cursus Scolaire">Cursus Scolaire</li>
-				<li id="pro" alt="Afficher les Compétences Professionnelles">Compétences Professionnelles</li>
-				<li id="other" alt="Afficher les autres centres d'intérêt">Autre</li>
-			</nav>
 		</div>
 		<footer>Copyright 2015 - Dant Benjamin</footer>
 	</div>
