--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
+	<script type="text/template" id="idTemplate">
+		<h2>Contact</h2>
+		<p>User ID : {{id}}</p>
+		<p>Badges Codecademy : {{badges}}</p>
+		<p>e-mail : {{contact.email}}</p>
+		<p>Website : {{contact.website}}</p>
+	</script>
+	<div class="overlay">
+		<div class="popup"></div>
+	</div>
 	<script type="text/template" id="headTemplate">
 		<h1>{{first_name}} {{last_name}}</h1>
 		<h2>{{occupation}}</h2>
@@ -30,12 +40,6 @@
 					<li id="pro" alt="Afficher les Compétences Professionnelles">Compétences Professionnelles</li>
 					<li id="contact" alt="Afficher les autres centres d'intérêt">Contact</li>
 				</nav>
-				<script type="text/template" id="idTemplate">
-					<p>User ID : {{id}}</p>
-					<p>Badges Codecademy : {{badges}}</p>
-					<p>e-mail : {{contact.email}}</p>
-					<p>Website : {{contact.website}}</p>
-				</script>
 				<div id="data-content" class="text-info default"></div>
 			</div>
 		</div>
