-Version 1.0.4 Ajout d'une fontion de rotation des users

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 		<h2>{{occupation}}</h2>
 	</script>
 	<div id="presentation">
-		<img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
+
+		<div id="head-block">
+			<div id="previous" class="icon">&lt;</div><img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
+			<div id="next" class="icon">&gt;</div>
+		</div>
 		<div id="head-template"></div>
 		<h1><span id="current-page">Données Personnelles</span></h1>
 	</div>
@@ -40,7 +44,9 @@
 					<li id="pro" alt="Afficher les Compétences Professionnelles">Compétences Professionnelles</li>
 					<li id="contact" alt="Afficher les autres centres d'intérêt">Contact</li>
 				</nav>
-				<div id="data-content" class="text-info default"></div>
+				<div id="data-content" class="text-info default">
+					<p>Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.</p>
+				</div>
 			</div>
 		</div>
 	</div>
