-M à J ajustement de l'apparence

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		<h2>{{occupation}}</h2>
 	</script>
 	<div id="presentation">
-
-		<div id="head-block">
-			<div id="previous" class="icon">&lt;</div><img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
+			<div id="previous" class="icon">&lt;</div>
 			<div id="next" class="icon">&gt;</div>
+		<div id="head-block">
+			<img id="my-image" src="css/download.jpeg" alt="Paysage de montagne avec un bouquetin"/>
 		</div>
 		<div id="head-template"></div>
 		<h1><span id="current-page">Données Personnelles</span></h1>
